# chromalens

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
chromalens/api/: __init__.py  system.py
chromalens/api/collections/: __init__.py  data.py  operations.py  query.py
chromalens/api/databases/: __init__.py  operations.py
chromalens/api/tenants/: __init__.py  operations.py
chromalens/cli/: __init__.py  commands.py  main.py
chromalens/client/: __init__.py  base.py  client.py
chromalens/config/: __init__.py  constants.py  settings.py
chromalens/exceptions/: __init__.py  api.py  client.py
chromalens/models/: __init__.py  collection.py  database.py  embedding.py  metadata.py  query.py  responses.py  tenant.py
chromalens/utils/: __init__.py  auth.py  embedding_functions.py  formatters.py  validators.py
docs/: index.md
examples/: basic_usage.py
tests/: conftest.py
tests/integration/: test_client_api.py
tests/unit/client/: test_client.py
ui/: __init__.py  app.py
ui/components/: collection_manager.py  connection.py  data_uploader.py  header.py  query_interface.py  sidebar.py  utils.py  visualization.py
ui/pages/: __init__.py  analytics.py  collections.py  dashboard.py  data_upload.py  query.py
